# lua-serialize

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  serialize.c  serialize.cpp  test.lua  test3.lua  valgrind.lua
